# Latent_ttc

./: .gitignore  README.md  analyze_loop_representations.py  eval_autoregressive.py  long_prompt.txt  main.py  model.py  prompts_example.txt  pyproject.toml  requirements.txt  run_fineweb_loops_sweep.sh  run_logpoisson_hausdorff.sh  run_looping_sweep.sh  test_hierarchical.py  train.py
config/: train_fineweb.py  train_gpt2_looped.py
data/fineweb/: prepare.py
out_looped/analysis/: prompts.txt
utils/: spectral_clipping.py
